bootstrap added for styling. bower used for bootstrap.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="dist/style.css" />
-		<title>Reactlab1</title>
-		
-	</head>
-	<body>
-	</body>
-	<script src="dist/app.dist.js"></script>
+    <head>
+        <title>Reactlab1</title>
+        <link rel="stylesheet" type="text/css" href="style2.css" />
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    </head>
+    <body>
+    </body>
+    <script src="app.dist.js"></script>
 </html>
